--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
+    "autoprefixer": "^10.4.13",
     "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2"
+    "jest-environment-jsdom": "^29.4.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
