--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.13",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
+    "msw": "^1.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6"
   }
